GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/test_overflow_int.deca
// Test : Overflow de int
// But : interdire les overflow de int.
// Type d'erreur : erreur syntaxique
// Résultat attendu : Int overflow

{
  int x = 2147483648;
}